--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
 language: elixir
 
 elixir:
-  - 1.2.0
   - 1.3.0
   - 1.3.2
-  - 1.4.0
-  - 1.4.2
+  - 1.4.5
 
 otp_release:
   - 19.3
+  - 20.0
+
+matrix:
+  exclude:
+    - elixir: 1.3.0
+      otp_release: 20.0
+    - elixir: 1.3.2
+      otp_release: 20.0
 
 after_script:
   - MIX_ENV=docs mix deps.get
