--- a/.github/workflows/nested_filter_ci.yml
+++ b/.github/workflows/nested_filter_ci.yml
@@ -1,4 +1,4 @@
-name: Elixir CI
+name: CI
 
 on:
   push:
@@ -7,25 +7,37 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test-elixir:
     name: Build and test
     runs-on: ubuntu-latest
+    env:
+      FORCE_COLOR: 1
+    strategy:
+      fail-fast: false
+      matrix:
+        elixir: [1.12.x, 1.11.x, 1.10.x, 1.9.x, 1.8.x, 1.7.x]
+        include:
+          - elixir: 1.7.x
+            otp: 20.x
+          - elixir: 1.8.x
+            otp: 20.x
+          - elixir: 1.9.x
+            otp: 21.x
+          - elixir: 1.10.x
+            otp: 22.x
+          - elixir: 1.11.x
+            otp: 23.x
+          - elixir: 1.12.x
+            otp: 24.x
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up Elixir
-      uses: erlef/setup-elixir@ade4f1d5676f98d7d890c87e6151f47340ac235c
+      uses: erlef/setup-beam@v1
       with:
-        elixir-version: '1.10.3' # Define the elixir version [required]
-        otp-version: '22.3' # Define the OTP version [required]
-    - name: Restore dependencies cache
-      uses: actions/cache@v2
-      with:
-        path: deps
-        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
-        restore-keys: ${{ runner.os }}-mix-
+        otp-version: ${{ matrix.otp }}
+        elixir-version: ${{ matrix.elixir }}
     - name: Install dependencies
-      run: mix deps.get
+      run: mix deps.get --force
     - name: Run tests
       run: mix test
