--- a/.github/workflows/nested_filter_ci.yml
+++ b/.github/workflows/nested_filter_ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   test-elixir:
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        elixir: [1.12.x, 1.11.x, 1.10.x, 1.9.x, 1.8.x, 1.7.x]
+        elixir: [1.14.x, 1.13.x, 1.12.x, 1.11.x, 1.10.x, 1.9.x, 1.8.x, 1.7.x]
         include:
           - elixir: 1.7.x
             otp: 20.x
@@ -29,6 +29,10 @@ jobs:
             otp: 23.x
           - elixir: 1.12.x
             otp: 24.x
+          - elixir: 1.13.x
+            otp: 25.x
+          - elixir: 1.14.x
+            otp: 25.x
 
     steps:
     - uses: actions/checkout@v2
@@ -37,6 +41,12 @@ jobs:
       with:
         otp-version: ${{ matrix.otp }}
         elixir-version: ${{ matrix.elixir }}
+    - name: Restore dependencies cache
+      uses: actions/cache@v2
+      with:
+        path: deps
+        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+        restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get --force
     - name: Run tests
